--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
 </head>
 
 <body>
+  <div class="card">
+    <img src="images/illustration-hero.svg" alt="hero-img">
+    <div class="card-body">
+      <h1>
+        Order Summary
+      </h1>
+      <h4>
+        You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
+      </h4>
+      <div class="price">
+        <img src="images/icon-music.svg" alt="icon-music-img">
+        <p class="plan">
+          <span>Annual Plan</span>
+          <span>$59.99/year</span>
+        </p>
+        <a href="#">Change</a>
+      </div>
+      <button class="btn-proceed">Proceed to Payment</button>
+      <button class="btn-cancel">
+        Cancel Order
+      </button>
 
+    </div>
+  </div>
 </body>
 
 </html>
